test/positive/feature_implicitthisforfields.java

public class feature_implicitthisforfields {
  public feature_implicitthisforfields() {}
  protected int x;
  public int m() {
    return x;
  }
}

