test/negative/IGNOREfeature_implicitthisclassforstaticfields.java

public class feature_implicitthisclassforstaticfields {
  public feature_implicitthisclassforstaticfields() {}
  protected static int x;
  public int m() {
    return x;
  }
}

